--- a/hkdyy/src/global.less
+++ b/hkdyy/src/global.less
@@ -1,7 +1,7 @@
 
 /* CSS Document */
 *{ margin:0; padding:0; outline:0; font-size: 100%;}
-input,ol,ul,li{margin:0; padding:0;}
+input,ol,ul,li,h1,h2,h3,h4,h5{margin:0; padding:0;}
 body{ font-size:14px; color:#666; font-family: "寰蒋闆呴粦"; }
 ol,ul,li{ list-style:none;}
 img{ border:0 none;}
@@ -300,69 +300,8 @@ html,body{
   overflow-x: auto;
   overflow-y: scroll;
 }
-.con-title{
-  height: 40px;
-  width: 100%;
-  background: #f3f3f3;
-  border-bottom: 1px solid #e4e4e4;
-  margin-top: 50px;
-  min-width: 1100px;
-}
-.titlesec{
-  height: 40px;
-  width: 1100px;
-  margin: 0 auto;
-}
-.titlesec span{
-  display: block;
-  border-left: 5px solid #1abc9c;
-  height: 18px;
-  margin-top: 11px;
-  padding-left: 6px;
-  color: #999;
-}
-.titlesec a.right{
-  display: block;
-  width: 40px;
-  height: 28px;
-  border: 1px solid #ccc;
-  margin-top: 5px;
-  line-height: 28px;
-  padding-left: 38px;
-  background: #fff url(./assets/u236.png) no-repeat 6px;
-  font-size: 13px;
-  margin-left: 10px;
-}
-.titlesec a.right.reback{
-  background: #fff url(./assets/u1159.png) no-repeat 10px;
-}
-.titlesec a:hover{
-  background: #f2f2f2 url(./assets/u236.png) no-repeat 6px;
-  color: #666;
-}
-.titlesec a.right.reback:hover{
-  background: #f2f2f2 url(./assets/u1159.png) no-repeat 10px;
-  color: #666;
-}
-.titlesec a.left{
-  display: block;
-  height: 28px;
-  line-height: 28px;
-  border: 1px solid #ccc;
-  background: #fff;
-  font-size: 13px;
-  margin-left: 10px;
-  margin-top: 5px;
-  padding: 0 20px;
-}
-.titlesec a.left:hover{
-  color: #1abc9c;
-}
-.titlesec a.left.active{
-  background: #1abc9c;
-  color: #fff;
-  border-color: #1abc9c;
-}
+
+
 .tablebox{
   width: 1100px;
   margin: 0 auto;
