--- a/hkdyy/src/global.less
+++ b/hkdyy/src/global.less
@@ -1,7 +1,7 @@
 
 /* CSS Document */
 *{ margin:0; padding:0; outline:0; font-size: 100%;}
-input,ol,ul,li,h1,h2,h3,h4,h5{margin:0; padding:0;}
+input,ol,ul,li,h1,h2,h3,h4,h5,div,p,span{margin:0; padding:0;box-sizing: border-box}
 body{ font-size:14px; color:#666; font-family: "寰蒋闆呴粦"; }
 ol,ul,li{ list-style:none;}
 img{ border:0 none;}
