--- a/hkdyy/src/global.less
+++ b/hkdyy/src/global.less
@@ -419,6 +419,7 @@ select[disabled=disabled]{
   background-color: #f9fafc;
   font-size: 14px;
   padding: 8px;
+ text-align: center;
 }
 .litable td{
   border:1px solid #e4e4e4;
