--- a/hkdyy/src/global.less
+++ b/hkdyy/src/global.less
@@ -542,7 +542,7 @@ select[disabled=disabled]{
   color: #666;
 }
 .shortenter{
-  width: 1058px;
+  //width: 1058px;
   border: 1px solid #e4e4e4;
   margin-top: 20px;
   background: #fff;
